--- a/book/readFrontend/templates/m/home.ejs
+++ b/book/readFrontend/templates/m/home.ejs
@@ -1,7 +1,7 @@
 <%- include('common/top', {}); %>
 <%- include('common/mainHeader', {}); %>
 <nav class="smallNav">
-    <a href="/rank" class="sel">龙虎榜</a>
+    <a href="/paihang" class="sel">龙虎榜</a>
     <a href="/category">分类</a>
     <a href="/quanben">全本</a>
     <a href="/history">轨迹 </a> <a href="/bookshelf">书架</a>
