--- a/book/readFrontend/templates/m/mulu.ejs
+++ b/book/readFrontend/templates/m/mulu.ejs
@@ -7,7 +7,24 @@
                 <%= chapter.title%></a></p>
         <% }); %>
     </div>
-    <%- include('common/listPagerPopup', {}); %>
+    <div class="page">
+        <%  if(pagination.currentPage > 1){ %>
+        <a class="page-btn" href="/book/<%= book.bookId%>/mulu/<%= pagination.currentPage-1%>">
+            上一页</a>
+        <% } %>
+        <span>
+            <%= pagination.currentPage%> /
+            <%= pagination.totalPage%></span>
+        <% if(pagination.currentPage < pagination.totalPage){ %>
+        <a class="page-btn" href="/book/<%= book.bookId%>/mulu/<%= pagination.currentPage+1%>">下一页</a>
+        <% } %>
+        <input type="number" class="go-page-input" id="go-page-input" min="1" max="<%= pagination.totalPage%>" placeholder="页数">
+        <button type="button" class="go-page-btn" onclick="goPage()">跳转</button>
+    </div>
 </div>
+<script type="text/javascript">
+var currentPage = <%= pagination.currentPage%>;
+var totalPage = <%= pagination.totalPage%>;
+</script>
 <%- include('common/footer', {}); %>
 <%- include('common/bottom', {}); %>
