--- a/book/readFrontend/templates/m/quanben.ejs
+++ b/book/readFrontend/templates/m/quanben.ejs
@@ -2,9 +2,9 @@
 <%- include('common/pageHeader', {}); %>
 <nav class="sortChannel_nav">
     <ul>
-        <li><a href="/category/" class="<%= !currentCategoryId?'sel':'' %>">&nbsp;全&nbsp;&nbsp;部&nbsp;</a></li>
+        <li><a href="/quanben/" class="<%= !currentCategoryId?'sel':'' %>">&nbsp;全&nbsp;&nbsp;部&nbsp;</a></li>
         <% branchInfo.categoryMap.forEach(function(category){ %>
-        <li><a href="/category/<%= category[1] %>/1" class="<%= currentCategoryId == category[1]?'sel':'' %>">
+        <li><a href="/quanben/<%= category[1] %>/1" class="<%= currentCategoryId == category[1]?'sel':'' %>">
                 <%= category[0] %></a></li>
         <% }); %>
     </ul>
@@ -22,14 +22,14 @@
     <% }); %>
     <div class="page">
         <%  if(pagination.currentPage > 1){ %>
-        <a class="page-btn" href="/category/<%= currentCategoryId?currentCategoryId+'/':''%><%= pagination.currentPage-1%>">
+        <a class="page-btn" href="/quanben/<%= currentCategoryId?currentCategoryId+'/':''%><%= pagination.currentPage-1%>">
             上一页</a>
         <% } %>
         <span>
             <%= pagination.currentPage%> /
             <%= pagination.totalPage%></span>
         <% if(pagination.currentPage < pagination.totalPage){ %>
-        <a class="page-btn" href="/category/<%= currentCategoryId?currentCategoryId+'/':''%><%= pagination.currentPage+1%>">下一页</a>
+        <a class="page-btn" href="/quanben/<%= currentCategoryId?currentCategoryId+'/':''%><%= pagination.currentPage+1%>">下一页</a>
         <% } %>
         <input type="number" class="go-page-input" id="go-page-input" min="1" max="<%= pagination.totalPage%>" placeholder="页数">
         <button type="button" class="go-page-btn" onclick="goPage()">跳转</button>
