--- a/book/readFrontend/templates/m/paihang.ejs
+++ b/book/readFrontend/templates/m/paihang.ejs
@@ -1,6 +1,13 @@
 <%- include('common/top', {}); %>
 <%- include('common/pageHeader', {}); %>
-<%- include('common/paihangNav', {}); %>
+<nav class="sortChannel_nav">
+    <ul>
+        <% branchInfo.rankMap.forEach(function(category){ %>
+        <li><a href="/paihang/<%= category[1] %>/1" class="<%= currentRankId == category[1]?'sel':'' %>">
+                <%= category[0] %></a></li>
+        <% }); %>
+    </ul>
+</nav>
 <%- include('common/searchForm', {}); %>
 <div class="recommend">
     <% books.forEach(function(book){ %>
@@ -8,10 +15,28 @@
         <span class="sort">
             <%= '['+book.categoryName+']'%></span>
         <span class="title">
-            <%= book.title%></span>（<span class="writer"><%= book.writer%></span>）
+            <%= book.title%></span>（<span class="writer">
+            <%= book.writer%></span>）
     </a>
     <% }); %>
-    <%- include('common/listPagerPopup', {}); %>
+    <div class="page">
+        <%  if(pagination.currentPage > 1){ %>
+        <a class="page-btn" href="/paihang/<%= currentRankId%>/<%= pagination.currentPage-1%>">
+            上一页</a>
+        <% } %>
+        <span>
+            <%= pagination.currentPage%> /
+            <%= pagination.totalPage%></span>
+        <% if(pagination.currentPage < pagination.totalPage){ %>
+        <a class="page-btn" href="/paihang/<%= currentRankId%>/<%= pagination.currentPage+1%>">下一页</a>
+        <% } %>
+        <input type="number" class="go-page-input" id="go-page-input" min="1" max="<%= pagination.totalPage%>" placeholder="页数">
+        <button type="button" class="go-page-btn" onclick="goPage()">跳转</button>
+    </div>
 </div>
+<script type="text/javascript">
+var currentPage = <%= pagination.currentPage%>;
+var totalPage = <%= pagination.totalPage%>;
+</script>
 <%- include('common/footer', {}); %>
 <%- include('common/bottom', {}); %>
