--- a/book/readFrontend/templates/m/common/mainHeader.ejs
+++ b/book/readFrontend/templates/m/common/mainHeader.ejs
@@ -1,5 +1,6 @@
 <header class="Index_Header">
     <!-- <img src="//files.35xs.co/m/images/logo.png" class="logo" title="闪舞小说网" alt="闪舞小说网" /> -->
-    <span class="logo">35xs</span>
+    <span class="logo">
+        <%= branchInfo.shorttitle%></span>
     <!-- <a href="/user/login" id="login" class="login">登录</a> -->
 </header>
