--- a/book/readFrontend/templates/m/common/bookTop.ejs
+++ b/book/readFrontend/templates/m/common/bookTop.ejs
@@ -20,6 +20,7 @@
     <meta property="og:novel:update_time" content="<%= book.lastUpdatedAt%>" />
     <meta property="og:novel:latest_chapter_name" content="<%= lastChapterName%>" />
     <meta property="og:novel:latest_chapter_url" content="<%= lastChapterUrl%>" />
+    <link rel="shortcut icon " type="images/x-icon" href="/favicon.ico">
     <link rel="stylesheet" type="text/css" href="/static/m/css/common.css" />
 </head>
 
