--- a/book/readFrontend/templates/pc/common/footer.ejs
+++ b/book/readFrontend/templates/pc/common/footer.ejs
@@ -1,5 +1,5 @@
 <div class="clearfix"></div>
-<div class="container" id="firendlink">
+<!-- <div class="container" id="firendlink">
     友情连接：
     <a target="_blank" href="https://www.biquwx.la/">笔趣阁</a>
     <a target="_blank" href="https://www.biquwx.la/0_383/">元尊</a>
@@ -18,7 +18,7 @@
     <a target="_blank" href="http://www.justsou.com/">展搜中文网</a>
     <a target="_blank" href="http://www.yawen8.la/">雅文言情小说</a>
     <a target="_blank" href="http://www.biquku.la/">笔趣库备用站</a>
-</div>
+</div> -->
 <footer>
     <div class="container">
         <p>本站所收录作品均是来源于网友上传,与本站立场无关,如有侵犯版权或涉黄问题,请来信告知,本站立即予以删除。 <br />邮箱:99amn.com@gmail.com</p>
@@ -27,5 +27,3 @@
 <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script language="javascript" type="text/javascript" src="/static/src/js/core.js"></script>
-<script language="javascript" type="text/javascript" src="/static/src/js/common.js"></script>
-<script language="javascript" type="text/javascript" src="/static/src/js/login.js"></script>
