--- a/book/readFrontend/templates/m/chapter.ejs
+++ b/book/readFrontend/templates/m/chapter.ejs
@@ -1,5 +1,5 @@
 <%- include('common/top', {}); %>
-<link rel="stylesheet" href="/static/m/css/read.css" />
+<link rel="stylesheet" href="/static/m/css/read.css?v=<%= branchInfo.staticVersion%>" />
 <%- include('common/pageHeader', {}); %>
 <%- include('common/readPager', {}); %>
 <%- include('common/readSetter', {}); %>
