--- a/book/readFrontend/templates/m/register.ejs
+++ b/book/readFrontend/templates/m/register.ejs
@@ -1,5 +1,5 @@
 <%- include('common/top', {}); %>
-<link rel="stylesheet" type="text/css" href="/static/m/css/login.css" />
+<link rel="stylesheet" type="text/css" href="/static/m/css/login.css?v=<%= branchInfo.staticVersion%>" />
 <%- include('common/pageHeader', {}); %>
 <div class="login_box">
     <form name="form_reg" method="post">
