--- a/book/readFrontend/templates/pc/chapter.ejs
+++ b/book/readFrontend/templates/pc/chapter.ejs
@@ -1,6 +1,6 @@
 <%- include('common/top', {}); %>
 <%- include('common/mainHeader', {}); %>
-<link rel="stylesheet" href="/static/src/css/read.css" />
+<link rel="stylesheet" href="/static/src/css/read.css?v=<%= branchInfo.staticVersion%>" />
 <div class="container">
     <div class="row">
         <ol class="col-xs-12 breadcrumb">
