--- a/book/readFrontend/templates/m/common/footer.ejs
+++ b/book/readFrontend/templates/m/common/footer.ejs
@@ -12,4 +12,4 @@
     <p>本站所收录作品均是来源于网友上传,与本站立场无关,如有侵犯版权或涉黄问题,请来信告知,本站立即予以删除。 邮箱:99amn.com@gmail.com</p>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
-<script language="javascript" type="text/javascript" src="/static/m/js/core.js"></script>
+<script language="javascript" type="text/javascript" src="/static/m/js/core.js?v=<%= branchInfo.staticVersion%>"></script>
