--- a/book/readFrontend/templates/m/common/top.ejs
+++ b/book/readFrontend/templates/m/common/top.ejs
@@ -10,7 +10,7 @@
     <meta http-equiv="Content-Type" content="application/xhtml+xml;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
     <link rel="shortcut icon " type="images/x-icon" href="/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="/static/m/css/common.css" />
+    <link rel="stylesheet" type="text/css" href="/static/m/css/common.css?v=<%= branchInfo.staticVersion%>" />
 </head>
 
 <body>
