--- a/book/readFrontend/templates/pc/book.ejs
+++ b/book/readFrontend/templates/pc/book.ejs
@@ -83,7 +83,8 @@
             </ul>
         </div>
         <div class="col-xs-12 border book-list-box">
-            <h2 class="book-list-title">全部章节列表</h2>
+            <h2 class="book-list-title">全部章节列表（共
+                <%= allChapters.length%>章）</h2>
             <ul class="book-list">
                 <% allChapters.forEach(function(chapter){ %>
                 <li class="book-item-5 col-xs-12 col-sm-6 col-md-4">
