--- a/book/readFrontend/templates/pc/common/bookTop.ejs
+++ b/book/readFrontend/templates/pc/common/bookTop.ejs
@@ -22,7 +22,7 @@
     <meta property="og:novel:latest_chapter_url" content="<%= lastChapterUrl%>" />
     <link rel="shortcut icon " type="images/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/static/src/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/static/src/css/style.css?v=<%= branchInfo.staticVersion%>" />
 </head>
 
 <body>
