--- a/book/readFrontend/templates/pc/book.ejs
+++ b/book/readFrontend/templates/pc/book.ejs
@@ -15,7 +15,7 @@
             <div class="book-list" style="padding-top: 15px;">
                 <div class="book-item-6 row">
                     <div class="book-image col-md-2 col-xs-4">
-                        <img onerror="src='/images/nopic.gif'" src="<%= book.cover%>" alt="<%= book.title%>">
+                        <img onerror="src='/static/src/images/noimg.jpg'" src="<%= book.cover%>" alt="<%= book.title%>">
                     </div>
                     <dl class="col-md-10 col-xs-8" style="padding-right: 0;">
                         <dt>
