--- a/book/readFrontend/templates/m/book.ejs
+++ b/book/readFrontend/templates/m/book.ejs
@@ -3,7 +3,7 @@
 <div class="">
     <div class="hot_sale">
         <div class="bookimg">
-            <img src="<%= book.cover%>">
+            <img src="<%= branchInfo.includeBranches[book.branchId].coverUrl+book.cover%>">
         </div>
         <div class="bookinfo">
             <p class="title">
