--- a/book/readFrontend/templates/m/home.ejs
+++ b/book/readFrontend/templates/m/home.ejs
@@ -16,7 +16,7 @@
         <% firstBlock.recommendBooks.forEach(function(book){ %>
         <a class="hot_sale" href="/book/<%= book.bookId%>/">
             <div class="bookimg">
-                <img src="<%= book.cover%>">
+                <img src="<%= branchInfo.includeBranches[book.branchId].coverUrl+book.cover%>">
             </div>
             <div class="bookinfo">
                 <p class="title">
