--- a/book/readFrontend/templates/pc/home.ejs
+++ b/book/readFrontend/templates/pc/home.ejs
@@ -8,7 +8,7 @@
                 <div class="col-xs-12 col-sm-6 book-item-1">
                     <div class="book-image">
                         <a href="/book/<%= book.bookId%>">
-                            <img onerror="src='/static/src/images/noimg.jpg'" src="<%= book.cover%>" alt="<%= book.title%>"></a>
+                            <img onerror="src='/static/src/images/noimg.jpg'" src="<%= branchInfo.includeBranches[book.branchId].coverUrl+book.cover%>" alt="<%= book.title%>"></a>
                     </div>
                     <dl>
                         <dt>
@@ -52,7 +52,7 @@
                     <div class="book-item-3">
                         <div class="book-image">
                             <a href="/book/<%= book.bookId%>">
-                                <img onerror="src='/static/src/images/noimg.jpg'" src="<%= book.cover%>" alt="重返1988"></a>
+                                <img onerror="src='/static/src/images/noimg.jpg'" src="<%= branchInfo.includeBranches[book.branchId].coverUrl+book.cover%>" alt="重返1988"></a>
                         </div>
                         <dl>
                             <dt>
@@ -94,8 +94,10 @@
                         </span>
                     </div>
                     <div class="col-md-5 hidden-xs hidden-sm">
+                        <% if(book.lastChapter){%>
                         <span class="book-new-chapter"><a href="/book/<%= book.bookId%>/<%= book.lastChapter.number%>">
                                 <%= book.lastChapter.title%></a></span>
+                        <% } %>
                     </div>
                     <div class="col-xs-3 col-md-3">
                         <span class="book-updated hidden-xs hidden-sm">
