--- a/book/readFrontend/templates/pc/error.ejs
+++ b/book/readFrontend/templates/pc/error.ejs
@@ -5,7 +5,7 @@
     <br />
     <div class="row ">
         <div class="col-md-12 border book-list-box" style="margin-top: 0;">
-            <h3 style="text-align: center;">您访问的资源已转移，请尝试使用“搜索”功能重新找回</h3>
+            <h3 style="text-align: center;">您访问的资源出错，可以尝试使用“搜索”功能找回</h3>
         </div>
     </div>
 </div>
