--- a/book/readFrontend/templates/m/error.ejs
+++ b/book/readFrontend/templates/m/error.ejs
@@ -1,7 +1,8 @@
 <%- include('common/top', {}); %>
 <%- include('common/pageHeader', {}); %>
-<div class="searchArea">
-    <h3 style="text-align: center;font-size: 14px;margin: 20px 0;">您访问的资源出错，可以尝试使用“搜索”功能找回</h3>
+<div class="searchArea" style="font-size: 14px;padding: 10px;">
+    <h3>您访问的资源出错，可以尝试使用“搜索”功能找回</h3>
+    <h3>或<a href="/" style="color:red;text-decoration: underline;">返回首页</a>浏览其他内容</h3>
 </div>
 <%- include('common/searchForm', {}); %>
 <%- include('common/footer', {}); %>
