--- a/book/readFrontend/templates/pc/error.ejs
+++ b/book/readFrontend/templates/pc/error.ejs
@@ -5,7 +5,7 @@
     <br />
     <div class="row ">
         <div class="col-md-12 border book-list-box" style="margin-top: 0;">
-            <h3 style="text-align: center;">您访问的资源出错，可以尝试使用“搜索”功能找回</h3>
+            <h3 style="padding: 0 0 10px 20px;">您访问的资源出错，可以尝试使用“搜索”功能找回，或<a href="/" style="color:red;text-decoration: underline;">返回首页</a>浏览其他内容</h3>
         </div>
     </div>
 </div>
