--- a/book/readFrontend/templates/pc/common/mainHeader.ejs
+++ b/book/readFrontend/templates/pc/common/mainHeader.ejs
@@ -6,7 +6,8 @@
                     <a href="javascript:void(0);">将本站设为首页</a>
                 </div>
                 <div class="topbar-addfavorite">
-                    <a href="javascript:void(0)">收藏笔趣阁</a>
+                    <a href="javascript:void(0)">收藏
+                        <%= branchInfo.shorttitle || "笔趣阁"%></a>
                 </div>
             </div>
             <div class="col-sm-8 text-right">
@@ -47,7 +48,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand hidden-sm hidden-md hidden-lg" href="/">笔趣阁</a>
+            <a class="navbar-brand hidden-sm hidden-md hidden-lg" href="/">
+                <%= branchInfo.shorttitle || "笔趣阁"%></a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
